--- a/web/data/playlists.yml
+++ b/web/data/playlists.yml
@@ -2,3 +2,9 @@ years:
   "2015": "spotify:user:westiecharts:playlist:1bp4iizhemNjuHMRtiAQdC"
   "2016": "spotify:user:westiecharts:playlist:2pDOKcm0XTRVY3iKQa3Q4S"
   "2017": "spotify:user:westiecharts:playlist:20Z54LAupPDy26uL3axS4i"
+months:
+  "2017":
+    "05": "spotify:user:westiecharts:playlist:1bp4iizhemNjuHMRtiAQdC"
+    "06": "spotify:user:westiecharts:playlist:2pDOKcm0XTRVY3iKQa3Q4S"
+    "07": "spotify:user:westiecharts:playlist:20Z54LAupPDy26uL3axS4i"
+    "08": "spotify:user:westiecharts:playlist:0BXDcMFAqc9wTYNWjqo7im"
