Filter out non-WCS playlists defined in config file
The playlist search results include a lot of non-dance playlists, e.g. ones from
radio stations with "WCS" in the name.

Define an array in the config file that I can manually add playlist IDs to, and
ignore them when fetching playlist tracks.

--- a/config.template.yaml
+++ b/config.template.yaml
@@ -6,3 +6,6 @@
 spotify_api:
   client_id: your_client_id
   client_secret: your_client_secret
+
+# Array of Spotify playlist IDs that should be ignored when fetching tracks
+ignored_playlists: []
